# licenseheaders

./: .gitignore  .pre-commit-hooks.yaml  DEVELOPMENT.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  default-type-settings.json  license-headers.py  licenseheaders.py  pyproject.toml  setup.cfg  setup.py
licenseheaders/: __init__.py  config.toml  licenseheaders-old.py  licenseheaders.py
templates/: mulanpsl-2.tmpl
tests/: .gitignore  driver.py  test_config_merge.py
tests/expected/: CMakeLists.txt  test.cpp  test.h  test.ps1  test.py  test.sh  test.v
tests/input/: CMakeLists.txt  test.cpp  test.h  test.ps1  test.py  test.sh  test.v
