[metadata]
license_files = LICENSE.txt

[aliases]
test = pytest

[tool:pytest]
#addopts = 
#     -s -v 
#     --cov gatenlp 
#     --cov-report term-missing
norecursedirs = 
  dist
  build
  docs
  build
  templates


[flake8]
max-line-length = 127
ignore = E402, W503

[pycodestyle]
max-line-length = 127
ignore = E402, W503

[mypy]
warn_unused_ignores = True

